test/functions/operatorOverloads/operatorMethods/nestedMethodBad.good
nestedMethodBad.chpl:14: In function 'main':
nestedMethodBad.chpl:19: error: unresolved call '+(R, R)'
$CHPL_HOME/modules/internal/Bytes.chpl:1088: note: this candidate did not match: +(s0: bytes, s1: bytes)
nestedMethodBad.chpl:19: note: because actual argument #1 with type 'R'
$CHPL_HOME/modules/internal/Bytes.chpl:1088: note: is passed to formal 's0: bytes'
nestedMethodBad.chpl:19: note: other candidates are:
$CHPL_HOME/modules/internal/String.chpl:364: note:   +(x: byteIndex, y: int)
$CHPL_HOME/modules/internal/String.chpl:365: note:   +(x: codepointIndex, y: int)
note: and 95 other candidates, use --print-all-candidates to see them
